--- a/projects/icc/tree/src/components/tree-view.component.html
+++ b/projects/icc/tree/src/components/tree-view.component.html
@@ -26,6 +26,7 @@
         class="icc-tree-node"
         [gridSetting]="gridSetting()"
         [treeConfig]="treeConfig()"
+        [rowIndex]="index"
         [columns]="columns()"
         [columnWidths]="columnWidths"
         [record]="record"
