--- a/projects/icc/tree/src/components/tree-row/tree-node/tree-node.component.html
+++ b/projects/icc/tree/src/components/tree-row/tree-node/tree-node.component.html
@@ -1,13 +1,13 @@
 <div class="tree-node">
-  @if (!node.leaf) {
-    @if (node.expanded) {
+  @if (!node().leaf) {
+    @if (node().expanded) {
       <icc-icon config="caret-down"></icc-icon>
     } @else {
       <icc-icon config="caret-right"></icc-icon>
     }
   }
-  @if (node.icon) {
-    <icc-icon class="tree-node-icon" [config]="node.icon"></icc-icon>
+  @if (node().icon) {
+    <icc-icon class="tree-node-icon" [config]="node().icon!"></icc-icon>
   }
   <div class="tree-node-text">{{ data }}</div>
 </div>
