--- a/projects/icc/file-upload/src/file-select-upload.component.html
+++ b/projects/icc/file-upload/src/file-select-upload.component.html
@@ -1,20 +1,22 @@
-<icc-layout *ngIf="uploadFiles$ | async as uploadFiles">
-  <icc-layout-header
-    title="ICC.UI.FILE_UPLOAD.FILE_SELECT_UPLOAD"
-    [buttons]="buttons"
-    (iccButtonClick)="buttonClick($event)"
-  >
-    <icc-checkbox [checked]="checked" (change)="onChange($event)">
-      {{ "ICC.UI.ACTIONS.ENABLED" | translate }}
-    </icc-checkbox>
-  </icc-layout-header>
+@if (uploadFiles$()) {
+  <icc-layout>
+    <icc-layout-header
+      title="ICC.UI.FILE_UPLOAD.FILE_SELECT_UPLOAD"
+      [buttons]="buttons"
+      (iccButtonClick)="buttonClick($event)"
+    >
+      <icc-checkbox [checked]="enabled()" (change)="onChange($event)">
+        {{ "ICC.UI.ACTIONS.ENABLED" | translate }}
+      </icc-checkbox>
+    </icc-layout-header>
 
-  <div class="icc-file-select-files">
-    @for (fieldConfig of fieldConfigs; track $index; let index = $index) {
-      <icc-upload-file-field [fieldConfig]="fieldConfig" (selectUploadFile)="selectUploadFile(fieldConfig, $event)">
-      </icc-upload-file-field>
-    }
-  </div>
+    <div class="icc-file-select-files">
+      @for (fieldConfig of fieldConfigs(); track $index; let index = $index) {
+        <icc-upload-file-field [fieldConfig]="fieldConfig" (selectUploadFile)="selectUploadFile(fieldConfig, $event)">
+        </icc-upload-file-field>
+      }
+    </div>
 
-  <icc-file-upload-grid> </icc-file-upload-grid>
-</icc-layout>
+    <icc-file-upload-grid> </icc-file-upload-grid>
+  </icc-layout>
+}
