file select upload

--- a/projects/icc/file-upload/src/components/file-upload-grid/file-upload-grid.component.html
+++ b/projects/icc/file-upload/src/components/file-upload-grid/file-upload-grid.component.html
@@ -1,7 +1,3 @@
-<icc-grid
-  *ngIf="gridData$ | async as gridData"
-  [gridConfig]="gridConfig"
-  [columnsConfig]="columnsConfig"
-  [gridData]="gridData"
->
-</icc-grid>
+@if (gridData$()) {
+  <icc-grid [gridConfig]="gridConfig" [columnsConfig]="columnsConfig" [gridData]="gridData$()"> </icc-grid>
+}
