--- a/projects/icc/calendar/src/calendar.component.html
+++ b/projects/icc/calendar/src/calendar.component.html
@@ -1,12 +1,12 @@
 <span class="icc-calendar-selected-text">
-  <label class="icc-calendar-selected-label" translate>{{ calendarConfig.selectedLabel }}</label
+  <label class="icc-calendar-selected-label" translate>{{ calendarConfig().selectedLabel }}</label
   ><span>:</span>
-  <label class="icc-calendar-selected-date">{{ selectedDate! | localeDate: calendarConfig.dateFormat }}</label>
+  <label class="icc-calendar-selected-date">{{ selectedDate()! | localeDate: calendarConfig().dateFormat }}</label>
 </span>
 
 <mat-calendar
-  [startAt]="selectedDate"
-  [selected]="selectedDate"
+  [startAt]="selectedDate()"
+  [selected]="selectedDate()"
   [minDate]="minDate"
   [maxDate]="maxDate"
   [dateClass]="dateClass()"
