--- a/projects/icc/d3/src/d3.component.html
+++ b/projects/icc/d3/src/d3.component.html
@@ -1,9 +1,3 @@
-<ng-container *ngIf="d3Config$ | async as d3Config">
-  <ng-container *ngIf="d3Setting$ | async as d3Setting">
-    <ng-container *ngIf="chartConfigs$ | async as chartConfigs">
-      <ng-container *ngIf="data$ | async as data">
-        <icc-d3-view [d3Config]="d3Config" [chartConfigs]="chartConfigs" [data]="data"></icc-d3-view>
-      </ng-container>
-    </ng-container>
-  </ng-container>
-</ng-container>
+@if (d3Config$() && d3Setting$() && chartConfigs$() && data$()) {
+  <icc-d3-view [d3Config]="d3Config$()" [chartConfigs]="chartConfigs$()" [data]="data$()"></icc-d3-view>
+}
