--- a/projects/icc/file-upload/src/file-select-upload.component.html
+++ b/projects/icc/file-upload/src/file-select-upload.component.html
@@ -2,7 +2,7 @@
   <icc-layout>
     <icc-layout-header
       title="ICC.UI.FILE_UPLOAD.FILE_SELECT_UPLOAD"
-      [buttons]="buttons"
+      [buttons]="buttons$()"
       (iccButtonClick)="buttonClick($event)"
     >
       <icc-checkbox [checked]="enabled()" (change)="onChange($event)">
