--- a/projects/icc/grid/src/components/grid-header/grid-group-header/grid-group-header.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-group-header/grid-group-header.component.html
@@ -2,7 +2,7 @@
   <icc-grid-header-item [style.flex]="'0 0 ' + rowSelectionCellWidth + 'px'"></icc-grid-header-item>
 }
 
-@for (header of groupHeaderColumns; track $index; let index = $index) {
+@for (header of groupHeaderColumns(); track $index; let index = $index) {
   <icc-grid-header-item
     [style.flex]="'0 0 ' + getHeaderWidth(header)"
     [style.max-width]="getHeaderWidth(header)"
