--- a/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.html
@@ -2,7 +2,7 @@
   [items]="menuItems"
   [level]="level + 1"
   [values]="values"
-  [disabled]="disabled"
+  [disabled]="disabled()"
   (iccMenuFormChanges)="onMenuFormChanges($event)"
   (iccMenuItemClick)="onMenuItemClick($event)"
 >
