--- a/projects/icc/grid/src/components/grid-header-view/grid-header-view.component.html
+++ b/projects/icc/grid/src/components/grid-header-view/grid-header-view.component.html
@@ -6,7 +6,7 @@
       [gridSetting]="gridSetting()"
       [gridConfig]="gridConfig()"
       [columns]="columns()"
-      [columnWidths]="columnWidths"
+      [columnWidths]="columnWidths()"
       (columnResizing)="onColumnResizing($event)"
       (columnResized)="onColumnResized($event)"
     >
@@ -18,7 +18,7 @@
     [gridSetting]="gridSetting()"
     [gridConfig]="gridConfig()"
     [columns]="columns()"
-    [columnWidths]="columnWidths"
+    [columnWidths]="columnWidths()"
     (columnResizing)="onColumnResizing($event)"
     (columnResized)="onColumnResized($event)"
     cdkDropList
