--- a/projects/icc/form-field/src/form-field.component.html
+++ b/projects/icc/form-field/src/form-field.component.html
@@ -6,12 +6,12 @@
       }
       <ng-content select="icc-label"></ng-content>:
     </label>
-    <div class="icc-form-field-wrapper" [ngStyle]="{ width: fieldWidth }">
-      <div class="icc-form-field-container" [ngClass]="fieldIndicator">
+    <div class="icc-form-field-wrapper" [style.width]="fieldWidth">
+      <div class="icc-form-field-container {{ fieldIndicator }}">
         <div class="icc-form-field-infix" (mouseenter)="onMouseenter()" (mouseleave)="onMouseleave()">
           <ng-content></ng-content>
         </div>
-        <div class="icc-form-field-suffix" [ngClass]="focused ? 'icc-form-field-suffix-focus' : ''">
+        <div class="icc-form-field-suffix" [class.icc-form-field-suffix-focus]="focused">
           <ng-content select="[iccSuffix]"></ng-content>
         </div>
       </div>
