--- a/projects/icc/fields/src/fields.component.html
+++ b/projects/icc/fields/src/fields.component.html
@@ -1,41 +1,41 @@
-@switch (fieldConfig.fieldType) {
+@switch (fieldConfig().fieldType) {
   @case (FieldType.Text) {
-    <icc-text-field [fieldConfig]="fieldConfig" [form]="form"></icc-text-field>
+    <icc-text-field [form]="form()" [fieldConfig]="fieldConfig()"></icc-text-field>
   }
   @case (FieldType.Number) {
-    <icc-number-field [fieldConfig]="fieldConfig" [form]="form"></icc-number-field>
+    <icc-number-field [form]="form()" [fieldConfig]="fieldConfig()"></icc-number-field>
   }
   @case (FieldType.Checkbox) {
-    <icc-checkbox-field [fieldConfig]="fieldConfig" [form]="form"></icc-checkbox-field>
+    <icc-checkbox-field [form]="form()" [fieldConfig]="fieldConfig()"></icc-checkbox-field>
   }
   @case (FieldType.Date) {
-    <icc-date-field [fieldConfig]="fieldConfig" [form]="form"></icc-date-field>
+    <icc-date-field [form]="form()" [fieldConfig]="fieldConfig()"></icc-date-field>
   }
   @case (FieldType.DateRange) {
-    <icc-date-range-field [fieldConfig]="fieldConfig" [form]="form"></icc-date-range-field>
+    <icc-date-range-field [form]="form()" [fieldConfig]="fieldConfig()"></icc-date-range-field>
   }
   @case (FieldType.Display) {
-    <icc-display-field [fieldConfig]="fieldConfig" [form]="form"></icc-display-field>
+    <icc-display-field [form]="form()" [fieldConfig]="fieldConfig()"></icc-display-field>
   }
   @case (FieldType.Hidden) {
-    <icc-hidden-field [fieldConfig]="fieldConfig" [form]="form"></icc-hidden-field>
+    <icc-hidden-field [form]="form()" [fieldConfig]="fieldConfig()"></icc-hidden-field>
   }
   @case (FieldType.Password) {
-    <icc-password-field [fieldConfig]="fieldConfig" [form]="form"></icc-password-field>
+    <icc-password-field [form]="form()" [fieldConfig]="fieldConfig()"></icc-password-field>
   }
   @case (FieldType.RadioGroup) {
-    <icc-radio-group-field [fieldConfig]="fieldConfig" [form]="form"></icc-radio-group-field>
+    <icc-radio-group-field [form]="form()" [fieldConfig]="fieldConfig()"></icc-radio-group-field>
   }
   @case (FieldType.Select) {
-    <icc-select-field [form]="form" [fieldConfig]="fieldConfig"></icc-select-field>
+    <icc-select-field [form]="form()" [fieldConfig]="fieldConfig()"></icc-select-field>
   }
   @case (FieldType.Textarea) {
-    <icc-textarea-field [fieldConfig]="fieldConfig" [form]="form"></icc-textarea-field>
+    <icc-textarea-field [form]="form()" [fieldConfig]="fieldConfig()"></icc-textarea-field>
   }
   @case (FieldType.UploadFile) {
-    <icc-upload-file-field [fieldConfig]="fieldConfig" [form]="form"></icc-upload-file-field>
+    <icc-upload-file-field [form]="form()" [fieldConfig]="fieldConfig()"></icc-upload-file-field>
   }
   @default {
-    <icc-text-field [fieldConfig]="fieldConfig" [form]="form"></icc-text-field>
+    <icc-text-field [form]="form()" [fieldConfig]="fieldConfig()"></icc-text-field>
   }
 }
