--- a/projects/icc/form-field/src/_form-field.component.theme.scss
+++ b/projects/icc/form-field/src/_form-field.component.theme.scss
@@ -28,7 +28,7 @@
     icc-error {
       color: orange;
       line-height: 20px;
-      white-space: nowrap;
+      //white-space: nowrap;
       icc-icon {
         padding: 0 0.375rem;
       }
