--- a/projects/icc/dashboard/src/dashboard.component.html
+++ b/projects/icc/dashboard/src/dashboard.component.html
@@ -1,4 +1,4 @@
-@if (config$() && setting$() && tiles$()) {
+@if (config$()) {
   <icc-layout>
     <icc-layout-header title="ICC.UI.TITLE.DASHBOARD" [buttons]="buttons" (iccButtonClick)="buttonClick($event)">
     </icc-layout-header>
