--- a/projects/icc/form/src/form.component.html
+++ b/projects/icc/form/src/form.component.html
@@ -1,4 +1,4 @@
-@if (formConfig$() && formSetting$() && formFieldsConfig$() && formData$()) {
+@if (formConfig$()) {
   <icc-layout>
     <icc-form-view
       [formSetting]="formSetting$()"
