--- a/projects/icc/tabs/src/tabs.component.html
+++ b/projects/icc/tabs/src/tabs.component.html
@@ -1,4 +1,4 @@
-@if (tabsConfig$() && tabsSetting$() && tabsTabs$()) {
+@if (tabsConfig$()) {
   <icc-tab-group
     cdkDropList
     cdkDropListOrientation="horizontal"
