--- a/projects/icc/tree/src/tree.component.html
+++ b/projects/icc/tree/src/tree.component.html
@@ -1,4 +1,4 @@
-@if (treeConfig$() && gridSetting$() && columnsConfig$() && treeData$()) {
+@if (treeConfig$()) {
   <icc-layout>
     @if (!treeConfig$().hideTopbar) {
       <icc-layout-header [buttons]="buttons" (iccButtonClick)="buttonClick($event)"> </icc-layout-header>
