--- a/projects/icc/fields/src/upload-file-field/upload-file-field.component.html
+++ b/projects/icc/fields/src/upload-file-field/upload-file-field.component.html
@@ -1,31 +1,31 @@
-<ng-container *ngIf="form" [formGroup]="form">
+@if (form()) {
   <icc-form-field
-    [ngStyle]="{ display: hidden ? 'none' : 'inherit' }"
-    [iccLabelWidth]="fieldConfig.labelWidth"
-    [iccFieldWidth]="fieldConfig.fieldWidth"
+    [formGroup]="form()"
+    [iccLabelWidth]="fieldConfig().labelWidth"
+    [iccFieldWidth]="fieldConfig().fieldWidth"
     [iccFormFieldControl]="field"
   >
-    @if (fieldConfig.fieldLabel !== undefined) {
-      <icc-label>{{ fieldConfig.fieldLabel | translate }}</icc-label>
+    @if (fieldConfig().fieldLabel !== undefined) {
+      <icc-label>{{ fieldConfig().fieldLabel! | translate }}</icc-label>
     }
     <input
       #fileInput
       iccInput
       type="file"
       class="upload-file-input"
-      [formControlName]="fieldConfig.fieldName!"
+      [formControlName]="fieldConfig().fieldName!"
       [required]="required"
       (change)="onChange($event)"
-      placeholder="{{ fieldConfig.placeholder! | translate }}"
+      placeholder="{{ fieldConfig().placeholder! | translate }}"
     />
     @if (!field.disabled) {
       <icc-icon class="folder-open" icon="folder-open" iccSuffix (click)="fileInput.click()"></icc-icon>
     }
-    @if (fieldConfig.clearValue && hasValue) {
+    @if (fieldConfig().clearValue && hasValue) {
       <icc-icon icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
     }
     @if (field && (field.touched || field.dirty) && field.errors) {
       <icc-form-field-errors><icc-field-errors [errors]="field!.errors!"></icc-field-errors></icc-form-field-errors>
     }
   </icc-form-field>
-</ng-container>
+}
