--- a/projects/icc/fields/src/radio-group-field/radio-group-field.component.html
+++ b/projects/icc/fields/src/radio-group-field/radio-group-field.component.html
@@ -1,19 +1,20 @@
-<ng-container *ngIf="form" [formGroup]="form">
+@if (form()) {
   <icc-form-field
-    [ngStyle]="{ display: hidden ? 'none' : 'inherit' }"
-    [iccLabelWidth]="fieldConfig.labelWidth"
-    [iccFieldWidth]="fieldConfig.fieldWidth"
+    [formGroup]="form()"
+    [style.display]="hidden ? 'none' : 'inherit'"
+    [iccLabelWidth]="fieldConfig().labelWidth"
+    [iccFieldWidth]="fieldConfig().fieldWidth"
     [iccFormFieldControl]="field"
   >
-    @if (fieldConfig.fieldLabel !== undefined) {
-      <icc-label>{{ fieldConfig.fieldLabel | translate }}</icc-label>
+    @if (fieldConfig().fieldLabel !== undefined) {
+      <icc-label>{{ fieldConfig().fieldLabel! | translate }}</icc-label>
     }
     @for (group of groups; track $index; let index = $index) {
       <icc-radio
         [value]="group.name"
-        [name]="fieldConfig.fieldName!"
+        [name]="fieldConfig().fieldName!"
         [field]="field"
-        [fieldName]="fieldConfig.fieldName!"
+        [fieldName]="fieldConfig().fieldName!"
         [checked]="getChecked(group.name)"
       >
         {{ group.title }}
@@ -23,4 +24,4 @@
       <icc-form-field-errors><icc-field-errors [errors]="field!.errors!"></icc-field-errors></icc-form-field-errors>
     }
   </icc-form-field>
-</ng-container>
+}
