--- a/projects/icc/fields/src/checkbox-field/checkbox-field.component.html
+++ b/projects/icc/fields/src/checkbox-field/checkbox-field.component.html
@@ -1,17 +1,18 @@
-<ng-container *ngIf="form" [formGroup]="form">
+@if (form()) {
   <icc-form-field
-    [ngStyle]="{ display: hidden ? 'none' : 'inherit' }"
-    [iccLabelWidth]="fieldConfig.labelWidth"
-    [iccFieldWidth]="fieldConfig.fieldWidth"
+    [formGroup]="form()"
+    [style.display]="hidden ? 'none' : 'inherit'"
+    [iccLabelWidth]="fieldConfig().labelWidth"
+    [iccFieldWidth]="fieldConfig().fieldWidth"
     [iccFormFieldControl]="field"
-    [showFieldEditIndicator]="showFieldEditIndicator"
+    [showFieldEditIndicator]="showFieldEditIndicator()"
   >
-    @if (fieldConfig.fieldLabel !== undefined && fieldConfig.labelBeforeCheckbox) {
-      <icc-label>{{ fieldConfig.fieldLabel | translate }}</icc-label>
+    @if (fieldConfig().fieldLabel !== undefined && fieldConfig().labelBeforeCheckbox) {
+      <icc-label>{{ fieldConfig().fieldLabel! | translate }}</icc-label>
     }
-    <icc-checkbox [formControlName]="fieldConfig.fieldName!" (change)="onChange()">
-      @if (fieldConfig.fieldLabel !== undefined && !fieldConfig.labelBeforeCheckbox) {
-        {{ fieldConfig.fieldLabel }}
+    <icc-checkbox [formControlName]="fieldConfig().fieldName!" (change)="onChange()">
+      @if (fieldConfig().fieldLabel !== undefined && !fieldConfig().labelBeforeCheckbox) {
+        {{ fieldConfig().fieldLabel! }}
       }
     </icc-checkbox>
 
@@ -19,4 +20,4 @@
       <icc-form-field-errors><icc-field-errors [errors]="field!.errors!"></icc-field-errors></icc-form-field-errors>
     }
   </icc-form-field>
-</ng-container>
+}
