--- a/projects/icc/fields/src/date-field/date-field.component.html
+++ b/projects/icc/fields/src/date-field/date-field.component.html
@@ -1,13 +1,14 @@
-<ng-container *ngIf="form" [formGroup]="form">
+@if (form()) {
   <icc-form-field
-    [ngStyle]="{ display: hidden ? 'none' : 'inherit' }"
-    [iccLabelWidth]="fieldConfig.labelWidth"
-    [iccFieldWidth]="fieldConfig.fieldWidth"
+    [formGroup]="form()"
+    [style.display]="hidden ? 'none' : 'inherit'"
+    [iccLabelWidth]="fieldConfig().labelWidth"
+    [iccFieldWidth]="fieldConfig().fieldWidth"
     [iccFormFieldControl]="field"
-    [showFieldEditIndicator]="showFieldEditIndicator"
+    [showFieldEditIndicator]="showFieldEditIndicator()"
   >
-    @if (fieldConfig.fieldLabel !== undefined) {
-      <icc-label>{{ fieldConfig.fieldLabel | translate }}</icc-label>
+    @if (fieldConfig().fieldLabel !== undefined) {
+      <icc-label>{{ fieldConfig().fieldLabel! | translate }}</icc-label>
     }
     <input
       #calendarInput
@@ -16,7 +17,7 @@
       iccInput
       [value]="display"
       (click)="openCalendar()"
-      [placeholder]="fieldConfig.placeholder! | translate"
+      [placeholder]="fieldConfig().placeholder! | translate"
       [disabled]="field.disabled"
       [required]="required"
       readonly
@@ -24,11 +25,11 @@
     <button iccSuffix icc-button [ghost]="true" [disabled]="field.disabled" (click)="openCalendar()">
       <icc-icon icon="calendar"></icc-icon>
     </button>
-    @if (fieldConfig.clearValue && hasValue) {
+    @if (fieldConfig().clearValue && hasValue) {
       <icc-icon icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
     }
     @if (field && (field.touched || field.dirty) && field.errors) {
       <icc-form-field-errors><icc-field-errors [errors]="field!.errors!"></icc-field-errors></icc-form-field-errors>
     }
   </icc-form-field>
-</ng-container>
+}
