--- a/projects/icc/fields/src/select-field/components/select-option.component.html
+++ b/projects/icc/fields/src/select-field/components/select-option.component.html
@@ -1,33 +1,35 @@
-<div *ngIf="hasHeader(fieldConfig)" class="icc-select-field-sticky-header">
-  @if (fieldConfig.multiSelection && fieldConfig.checkAll) {
-    <icc-option (click)="checkAll(selectOptions)">
-      <icc-checkbox [checked]="isAllChecked">{{ "ICC.UI.ACTIONS.CHECK_ALL" | translate }}</icc-checkbox>
-    </icc-option>
-  }
-  @if (fieldConfig.multiSelection && fieldConfig.uncheckAll) {
-    <icc-option (click)="checkAll([])">
-      <icc-checkbox [checked]="!hasValue">{{ "ICC.UI.ACTIONS.UNCHECK_ALL" | translate }}</icc-checkbox>
-    </icc-option>
-  }
-  @if (fieldConfig.isEmpty) {
-    <icc-option #refIsEmpty [value]="isEmptyValue" (click)="headerOptionClick(refIsEmpty)">
-      <icc-checkbox [checked]="refIsEmpty.selected">
-        {{ "ICC.UI.ACTIONS.IS_EMPTY" | translate }}
-      </icc-checkbox>
-    </icc-option>
-  }
-  @if (fieldConfig.notEmpty) {
-    <icc-option #refIsNotEmpty [value]="notEmptyValue" (click)="headerOptionClick(refIsNotEmpty)">
-      <icc-checkbox [checked]="refIsNotEmpty.selected">
-        {{ "ICC.UI.ACTIONS.NOT_EMPTY" | translate }}
-      </icc-checkbox>
-    </icc-option>
-  }
-</div>
-
-<ng-container
-  *ngIf="selectOptions | selectFilter: selectFilter : fieldConfig.optionLabel : fieldSetting.singleListOption as result"
->
+@if (hasHeader(fieldConfig())) {
+  <div class="icc-select-field-sticky-header">
+    @if (fieldConfig().multiSelection && fieldConfig().checkAll) {
+      <icc-option (click)="checkAll(selectOptions())">
+        <icc-checkbox [checked]="isAllChecked">{{ "ICC.UI.ACTIONS.CHECK_ALL" | translate }}</icc-checkbox>
+      </icc-option>
+    }
+    @if (fieldConfig().multiSelection && fieldConfig().uncheckAll) {
+      <icc-option (click)="checkAll([])">
+        <icc-checkbox [checked]="!hasValue">{{ "ICC.UI.ACTIONS.UNCHECK_ALL" | translate }}</icc-checkbox>
+      </icc-option>
+    }
+    @if (fieldConfig().isEmpty) {
+      <icc-option #refIsEmpty [value]="isEmptyValue" (click)="headerOptionClick(refIsEmpty)">
+        <icc-checkbox [checked]="refIsEmpty.selected">
+          {{ "ICC.UI.ACTIONS.IS_EMPTY" | translate }}
+        </icc-checkbox>
+      </icc-option>
+    }
+    @if (fieldConfig().notEmpty) {
+      <icc-option #refIsNotEmpty [value]="notEmptyValue" (click)="headerOptionClick(refIsNotEmpty)">
+        <icc-checkbox [checked]="refIsNotEmpty.selected">
+          {{ "ICC.UI.ACTIONS.NOT_EMPTY" | translate }}
+        </icc-checkbox>
+      </icc-option>
+    }
+  </div>
+}
+@if (
+  selectOptions() | selectFilter: selectFilter() : fieldConfig().optionLabel : fieldSetting().singleListOption;
+  as result
+) {
   <cdk-virtual-scroll-viewport
     class="icc-select-virtual-scroll"
     [itemSize]="28"
@@ -40,11 +42,11 @@
       #ref
       (click)="clickOption(ref)"
     >
-      @if (fieldConfig.multiSelection) {
+      @if (fieldConfig().multiSelection) {
         <icc-checkbox [checked]="ref.selected">
           <icc-filter-highlight [value]="getOptionLabel(option)" [filterValue]="filterValue"> </icc-filter-highlight>
         </icc-checkbox>
-      } @else if (fieldSetting.singleListOption && fieldConfig.selectOnly) {
+      } @else if (fieldSetting().singleListOption && fieldConfig().selectOnly) {
         <ng-container>{{ option }}</ng-container>
       } @else {
         <icc-filter-highlight [value]="getOptionLabel(option)" [filterValue]="filterValue"> </icc-filter-highlight>
@@ -54,4 +56,4 @@
       <icc-option class="no-result">{{ "ICC.UI.LIST.NO_RESULT" | translate }}</icc-option>
     }
   </cdk-virtual-scroll-viewport>
-</ng-container>
+}
