--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -1,12 +1,12 @@
 <ng-container *ngIf="fieldConfig$ | async as fieldConfig">
   <ng-container *ngIf="fieldSetting$ | async as fieldSetting">
-    <ng-container *ngIf="form" [formGroup]="form">
+    <ng-container *ngIf="form()" [formGroup]="form()">
       <icc-form-field
         *ngIf="selectOptions$ | async as selectOptions"
         [ngStyle]="{ display: hidden ? 'none' : 'inherit' }"
         [iccLabelWidth]="fieldConfig.labelWidth"
         [iccFieldWidth]="fieldConfig.fieldWidth"
-        [showFieldEditIndicator]="showFieldEditIndicator"
+        [showFieldEditIndicator]="showFieldEditIndicator()"
         [iccFormFieldControl]="field"
       >
         @if (fieldConfig.fieldLabel !== undefined) {
@@ -49,7 +49,7 @@
               [autocomplete]="autocompleteComponent"
               [setSelected]="setSelected"
               [selectFilter]="field.value"
-              [form]="form"
+              [form]="form()"
               [selectOptions]="selectOptions"
               (clickedOption)="onClickedOption($event)"
               (autocompleteClose)="onAutocompleteClose($event)"
